[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/face-with-open-mouth.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://scenes/PlayerBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/CharacterArea.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 3 )
PlayerBullet = ExtResource( 4 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="CollisionArea" parent="." index="2" groups=[
"player",
]]

[node name="CollisionShape2D" parent="CollisionArea" index="0"]
shape = SubResource( 3 )

[node name="MLGArea" type="Area2D" parent="." index="3"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MLGArea" index="0"]
shape = SubResource( 1 )

[node name="SkillTimer" type="Timer" parent="." index="4"]

[node name="InvincibleTimer" type="Timer" parent="." index="5"]

[node name="SkillArea" type="Area2D" parent="." index="6" groups=[
"player_skill",
]]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkillArea" index="0"]
shape = SubResource( 2 )
[connection signal="player_die" from="." to="." method="_on_Player_player_die"]
[connection signal="player_use_skill" from="." to="." method="_on_Player_player_use_skill"]
[connection signal="timeout" from="SkillTimer" to="." method="_on_SkillTimer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="area_entered" from="SkillArea" to="." method="_on_SkillArea_area_entered"]
